--- a/appspec.yml
+++ b/appspec.yml
@@ -13,6 +13,9 @@ hooks:
     - location: scripts/start_server.sh
       timeout: 30
       runas: root
+    - location: scripts/load_db.sh
+      timeout: 60
+      runas: root
   ApplicationStop:
     - location: scripts/stop_server.sh
       timeout: 30
